# register-macro

./: Cargo.toml  LICENSE
src/: lib.rs  profile.rs  register.rs
