[package]
name = "register-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.36", features = ["full", "extra-traits"] }
quote = "1.0.33"
case_style = "0.2.1"
proc-macro2 = "1.0.67"
ident-style = { path = "../ident-style" }

[lib]
proc-macro = true
